# api/src/types/db.ts
@@ -187,6 +187,8 @@ export interface Hosts {
   createdAt: Timestamp
   deletedAt: Timestamp | null
   id: Generated<string>
+  legalName: string
+  signedHostAgreementAt: Timestamp
   updatedAt: Timestamp
   userId: string
 }
